                            =======================
                            History For AdvanceCOMP
                            =======================


ADVANCECOMP VERSION 1.23 2016/11
================================

* Fixed build issue from source code due missing libdeflate header.


ADVANCECOMP VERSION 1.22 2016/11
================================

* Enabled again the command line wildcard expansion in the Windows
  builds. The new MingW compiler was disabling it by default.


ADVANCECOMP VERSION 1.21 2016/11
================================

* Added libdeflate support. It's the new default because it provides
  better performance and compression than 7z.
  From https://github.com/ebiggers/libdeflate
  at commit 28cc14994b8b57f590d31a7340c8fffc5cc37d88
* Update to te latest zopfli library.
  From https://github.com/google/zopfli
  at commit 6818a0859063b946094fb6f94732836404a0d89a.
* Windows binaries built with MingW 4.9.3 using the MXE cross compiler at
  commit 62bcdbee56e87c81f1faa105b8777a5879d4e2e with targets
  i686-w64-mingw32 and x86_64-w64-mingw32.
* DOS binaries built with DJGPP 4.8.5 from
  https://github.com/andrewwutw/build-djgpp


ADVANCECOMP VERSION 1.20 2015/08
================================

* Fixed .gz recompression of data bigger than 400 MB.
* Fixed .gz recompression with -0 and -1 options.
* Updated to the latest zopfli [Aaron Kaluszka].
* Preserve the EFS flag in .zip files [Jason Penney].


ADVANCECOMP VERSION 1.19 2014/03
================================

* Limited the iterations number to 255 with the -3 option.
* Added a new -k, --keep-file-time option to advzip [Marco Banfi].
* Made the Windows binary again compatible with old 686 processors.


ADVANCECOMP VERSION 1.18 2013/11
================================

* Added build support for new powerpc architectures.
* Fixed build with BZIP.


ADVANCECOMP VERSION 1.17 2013/03
================================

* Changed to GPL3.