@@ -1,6 +1,11 @@
 .TH "History For AdvanceCOMP" 1
 .SH NAME
 advcomp \- History For AdvanceCOMP
+.SH ADVANCECOMP VERSION 1.24 2017/01 
+.PD 0
+.IP \(bu
+Added preliminary 64 bits support.
+.PD
 .SH ADVANCECOMP VERSION 1.23 2016/11 
 .PD 0
 .IP \(bu
